# Rust-In-Practice-my-notes

./: README.md
code/ch01/: Cargo.toml
code/ch01/members/basic-syntax/src/: main.rs
code/ch01/members/calculator-02/: Cargo.toml
code/ch01/members/calculator-02/src/: lib.rs  main.rs
code/ch01/members/calculator/src/: lib.rs  main.rs
code/ch03/: Cargo.toml
code/ch03/members/most-essential/: Cargo.toml
code/ch03/members/most-essential/src/: lib.rs
code/ch05/: Cargo.toml  README.md
code/ch05/members/enum-example-01/: Cargo.toml
code/ch05/members/enum-example-01/src/: lib.rs  main.rs
code/ch05/members/enums/src/: lib.rs
code/ch06/: Cargo.toml
code/ch06/members/stack-allocated-variables/: Cargo.toml
code/ch06/members/stack-allocated-variables/src/: lib.rs
code/ch07/: Cargo.toml
code/ch07/members/helpcode/: Cargo.toml  README.md
code/ch07/members/helpcode/src/: main.rs
code/ch08/: Cargo.toml
code/ch08/members/std_examples/: Cargo.toml
code/ch08/members/std_examples/src/: lib.rs
code/ch09/: Cargo.toml
code/ch09/members/sort-files-by-date/: Cargo.toml
code/ch10/: Cargo.toml
code/ch10/members/arc_examples/: Cargo.toml
code/ch10/members/arc_examples/src/: lib.rs
code/ch10/members/box-examples/: Cargo.toml
code/ch10/members/box-examples/src/: lib.rs
code/ch10/members/circula_linked/: Cargo.toml
code/ch10/members/circula_linked/src/: lib.rs
code/ch10/members/rc-examples/: Cargo.toml
code/ch10/members/rc-examples/src/: lib.rs
code/ch10/members/weak_examples/: Cargo.toml
code/ch10/members/weak_examples/src/: lib.rs
(+2 files in other folders)
