workspace = { members = [ "members/arc_examples","members/box-examples", "members/circula_linked", "members/rc-examples", "members/reference_cycle_between_objects", "members/weak_examples"] }
[package]
name = "ch10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
